fixed issue with footer overlapping bag content on bag page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -384,7 +384,7 @@ input[name='q']::placeholder {
 }}
 
 /* Slightly larger container on xl screens */
-@media (min-width: 1200px) {
+@media (min-width: 1400px) {
     .container {
     max-width: 80%;
     }
